# sports-coaching-skills

./: .gitignore  .mcp.json  LICENSE  README.md  architecture.html  package-lock.json  package.json  tsconfig.json
.claude/: settings.local.json
.claude/skills/coaching-evaluator/: SKILL.md
.claude/skills/skill-builder/: SKILL.md
diagram-server/: pyproject.toml
diagram-server/src/soccer_diagrams/: __main__.py  evaluator.py  html_pdf_builder.py  pdf_builder.py  renderer.py  schema.py  server.py  table_fixer.py  text_to_pdf.py
diagram-server/tests/: test_evaluate.py  test_pdf.py  test_render.py
diagram-server/tests/fixtures/: sample_drill.json
mcp-server/: package-lock.json  package.json
mcp-server/src/: index.ts  meta-tools.ts  tools.ts  transcript.ts  vectordb.ts
scripts/: analyze-resources.ts  build-index.ts  test-validate.js
templates/: evaluation-comparison.txt  improvement-plan.md  improvement-plan.txt
